--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@
 .repl_history
 build/
 
+## Specific to IDEA
+api-ai-ruby.iml
+.idea
+
+
 ## Documentation cache and generated files:
 /.yardoc/
 /_yardoc/
@@ -23,6 +28,7 @@ build/
 ## Environment normalisation:
 /.bundle/
 /lib/bundler/man/
+Gemfile.lock
 
 # for a library or gem, you might want to ignore these files since the code is
 # intended to run in multiple environments; otherwise, check them in:
